# uc_tools

./: .gitignore  LICENSE  Makefile  README  README.md  actor.h  balloci.h  base64.h  bigendian.h  bios.h  bitbuf.h  blocking_io.h  buf.h  build_lib.sh  bump_alloc.h  bump_alloc_aligned.h  byteswap.h  callback.h  cbuf.c  cbuf.h  cbuf16.h  cbuf32.h  cbuf_info.h  chunks.h  counter.h  cproc.h  crc.h  csp.c  csp.h  csp_test.c  cycle_counter.c  cycle_counter.h  cycle_counter_generic.h  data.h  dataflow.c  dataflow.h  djb2.h  dlist.h  err_obj.h  ethernet.h  (+151 more)
blowfish/: blowfish.c  blowfish.h  blowfish_dat.c
chibios/: README.md  build.sh
chibios/bluepill/: Makefile  main.c
cscope/: cscope.sh
doc/: c_templates.md  seq_lua.md  seq_lua_run_doc.sh
esp/: nix-develop-esp-idf.sh  run.sh
esp/common/: bios.h  mod_esp_3if.c  mod_esp_acm.c  mod_esp_tcp.c  mod_esp_wifi.c
esp/esp32/: CMakeLists.txt  espport.sh  menuconfig.sh  monitor.sh  nix-develop-esp32-idf.sh  sdkconfig  tty.sh
esp/esp32c3/: espport.sh  nix-develop-esp32c3-idf.sh  sdkconfig
esp/esp32s3/: esp_dmx.sh  espport.sh  flash.sh  flash_tcp.sh  menuconfig.sh  monitor.sh  ninja.sh  nix-develop-esp32s3-idf.sh  sdkconfig
esp32/: flash.sh  load.sh  monitor.sh  ninja.sh  nix-develop-esp32-idf.sh  sdkconfig
esp32/main/: CMakeLists.txt  esp32_main.c  esp_os.h  mod_esp_3if.c  mod_esp_swd.c  mod_esp_wifi.c
esp32/plugin/: Makefile  README.md  cmd.sh  load.sh  sram.ld  sram.ld.sh  test.c
esp32_minimal/: Makefile
esp32c3/: cmake.sh  load.sh  nix-develop-esp32c3-idf.sh  sdkconfig
esp32c3/main/: CMakeLists.txt  esp32c3_main.c
esp32c3/plugin/: Makefile  cmd.sh  load.sh  sram.ld  test.c
esp32s3/: cmake.sh  flash.sh  monitor.sh  nix-develop-esp32s3-idf.sh  sdkconfig
esp32s3/main/: CMakeLists.txt  esp32s3_main.c
esp32s3/plugin/: README.md  load.sh  sram.ld.sh
gambit/: Makefile  run.sh  test.scm
gdb/: 128a.f103.ld.sh  128b.f103.ld.sh  256a.f103.ld.sh  256b.f103.ld.sh  Makefile  README.app.txt  README.ld.txt  README.mod.md  add_bin_sections.sh  all.do  asus_plugin.c  base.h  bl_c8t6.c  bl_c8t6_a12b5.c  bl_c8t6_a12b5_boot1.c  bl_c8t6_boot1.c  bl_c8t6_usb_pullup.c  bl_f4.c  bl_hyministm32v.c  bootloader.c  bootloader.h  bp2.c  bp3.c  bp4.c  bp7.c  bp_ethernet.c  build.a.sh  build.elf.sh  build.o.sh  build.sh  buildlib.sh  cat_hex.sh  cbuf.c  cdcacm_desc.c  clean.do  cmd_3if.h  command.h  core.f103.ld  core.f103.ld.sh  core.f407.ld  (+178 more)
gdb/old/: Makefile  ram.ld.sh
gdbi/: 3306.sh  gdbi.sh  lib.gdb  test.scm  test.sh
host/: README.md  build.a.sh  build.elf.sh  build.o.sh  clean.sh  env.host.sh  macros.h  packet_bridge.c  packet_bridge.h
hs/: Makefile  README.md  default.nix  release.nix  uc-tools.cabal  uc-tools.elf  uc-tools.hs
hs/UCTools/: Lua.hs
linux/: actor.h  assert_execvp.h  assert_mmap.h  assert_read.h  assert_write.h  bin2fw.c  bsd_checksum.c  build.elf.sh  build.o.sh  build.sh  chop.c  connect.sh  crc32b.c  csp_fd.c  csp_fd.h  dynamic.host.ld.sh  echo_server.c  elfutils_lua51.c  elfutils_tags.h  env.armv7-nix.sh  env.host.sh  env.hostdbg.sh  env.mipsel-nix.sh  exec.c  file_tools.h  flashdump_info.c  gdbstub_connect.c  gdbstub_lua51.c  gdbstub_proxy.c  gdbstub_proxy.sh  hex_console.sh  http_panel.c  http_wasm.c  http_waveview.c  ilog.h  irdec.c  keylog.c  klog.c  klog.sh  la_dmx.c  (+152 more)
lua/: actor_uv.lua  csp.lua  cstruct.lua  dataflow.lua  debug_lua.sh  doc_seq.lua  graphviz.lua  hello.scm  iter.lua  lib.sm  literal.lua  lua.sh  lure.lua  osc.lua  qcprop.lua  qcrun.lua  qcrun.sh  qcsm.lua  run_doc.lua  run_doc.sh  scheme.lua  seq.lua  slc_rvm.lua  smc.lua  synth_adt.lua  test.scm  test.sh  test.sm  test1.sm  test2.sm  test_actor.lua  test_actor_uv.lua  test_adt.lua  test_cm.lua  test_co.sm  test_cproc.lua  test_csp.lua  test_csp.sh  test_csp.sm  test_dataflow.lua  (+55 more)
lua/elfutils/: README.md  (+1 more)
ml/: Makefile  README.md  dune-project
ml/uc_tools/lib/: dune
ml/uc_tools/test/: dune
qemu/: stm.sh
rkt/: README.md  example.rkt  genc.rkt  sm-syntax.rkt  sm.rkt  test_csp.rkt  test_example.rkt
rust/: Cargo.toml  Makefile  install.sh  memory.x  shell.nix  wrap.mk
rust/.cargo/: config
rust/async/: Cargo.toml  Makefile
rust/async/src/: main.rs
rust/cmix_ex/: README.md
rust/cmix_ex/ex1/: build.sh  test.c
rust/cmix_ex/ex2/: Cargo.toml  build.sh
rust/cmix_ex/ex2/src/: add1.rs
rust/esp32/: Cargo.toml  Makefile  README.md
rust/esp32/src/: main.rs
rust/f103/: Cargo.toml  Makefile  wrap.mk
rust/f103/.cargo/: config
rust/f103/src/: lib.rs  main.rs
rust/f401/: Cargo.toml  Makefile  wrap.mk
rust/f401/.cargo/: config
rust/f401/src/: main.rs
rust/f407/: Cargo.toml  Makefile
rust/f407/.cargo/: config
rust/f407/src/: main.rs
rust/l433/: Cargo.toml  Makefile
rust/l433/.cargo/: config
rust/l433/src/: main.rs
rust/linux/ex1/: add1.rs
rust/linux/ex2/: Cargo.toml
rust/linux/ex2/src/: main.rs
rust/mnemos-app/: Cargo.toml
rust/mnemos-app/.cargo/: config.toml
rust/mnemos-app/src/: main.rs
rust/rp2040/: Makefile
rust/rp2040/src/: main.rs
rust/src/: main.rs
sh/: channel.sh
stm32f103/: 128a.f103.ld.sh  20ram.f103.ld.sh  256a.f103.ld.sh  Makefile  README.ld.md  README.mod.md  app.mk  asus_plugin.c  base.h  bl_c8t6_a12b5.c  bl_c8t6_boot1.c  bl_f4.c  bl_hyministm32v.c  bl_hyministm32v.h  bl_hyministm32v_autostart.c  bootloader.c  bootloader.h  bp3.c  bp6.c  bp7.c  bp_ethernet.c  build.sh  cat_hex.sh  command.h  config.ld  core.f407.ld  cspisr.c  data.ld  dht11.h  elf2fw.sh  env.common.sh  env.data.sh  env.f103.sh  env.f407.sh  env.ram.sh  etf_test.c  example_data.data  f103.ram.ld  flash_plugin.link.sh  forth.link.sh.disabled  (+65 more)
wasm/: build.sh  index.html  lib.js  main.js  protocol.js  put.sh  runtime.js  test.c  tools.js  view.js  wave.js  ws.js
web/: index.html  lib.js
webroot/: app.js  index.html  la_ws.html  main.js  protocol.js  start.sh  test.c  test_apps.js  view.js  wasm_build.sh  wave.js
(+280 files in other folders)
