# Target configuration is in .cargo/config

[package]
name = "esp32"
version = "0.0.1"
authors = ["Tom Schouten <tom@zwizwa.be>"]
description = "ESP32 template"
keywords = ["template"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zwizwa/uc_tools"


[dependencies]
esp8266-hal = "0.5.0"
# xtensa-lx = "0.6.0"


[[bin]]
name = "esp32"
path = "src/main.rs"

