
# Target configuration is in .cargo/config


[package]
name = "nucleo_l433"
version = "0.0.1"
authors = ["Tom Schouten <tom@zwizwa.be>"]
description = "Nucleo STM32L433 template"
keywords = ["arm", "cortex-m", "template"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zwizwa/uc_tools"


[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.12"


# https://lib.rs/crates/stm32l4
# https://github.com/stm32-rs/stm32-rs
stm32l4 = {version = "0.12.1", features = ["stm32l4x3", "rt"]}

# https://crates.io/crates/stm32l4xx-hal
# https://docs.rs/stm32l4xx-hal/0.5.0/stm32l4xx_hal/
# https://github.com/stm32-rs/stm32l4xx-hal
stm32l4xx-hal = {version = "0.5.0", features = ["stm32l4x3"]}

embedded-hal = "0.2.4"

cortex-m-semihosting = "0.3.1"
panic-semihosting = "0.4.0"
# panic-halt = "0.2.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 's'

[[bin]]
name = "nucleo_l433"
path = "src/main.rs"

