[package]
name = "mnemos-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Using crates.io - Check the version is correct!
# [dependencies]
# mnemos-userspace = "0.1.0"

# [dependencies]

# OR - using git (don't do both!)
[dependencies.mnemos-userspace]
version = "0.1.0"
git = "https://github.com/jamesmunns/pellegrino"
branch = "main"

